syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "peers.proto";

package peerdb_flow;

option go_package = "github.com/alexcode/mirror_cli/proto/gen";

message TableMapping {
  string source_table_identifier = 1;
  string destination_table_identifier = 2;
  string partition_key = 3;
  repeated string exclude = 4;
}

message FlowConnectionConfigs {
  string flow_job_name = 1;
  repeated TableMapping table_mappings = 4;
  uint32 max_batch_size = 5;
  uint64 idle_timeout_seconds = 6;
  string cdc_staging_path = 7;
  string publication_name = 8;
  string replication_slot_name = 9;
  bool do_initial_snapshot = 10;
  uint32 snapshot_num_rows_per_partition = 11;
  string snapshot_staging_path = 12;
  uint32 snapshot_max_parallel_workers = 13;
  uint32 snapshot_num_tables_in_parallel = 14;
  bool resync = 15;
  bool initial_snapshot_only = 16;
  string soft_delete_col_name = 18;
  string synced_at_col_name = 19;
  string script = 20;
  string source_name = 22;
  string destination_name = 23;
  map<string, string> env = 24;
}

enum FlowStatus {
  STATUS_UNKNOWN = 0;
  STATUS_RUNNING = 1;
  STATUS_PAUSED = 2;
  STATUS_PAUSING = 3;
  STATUS_SETUP = 4;
  STATUS_SNAPSHOT = 5;
  STATUS_TERMINATING = 6;
  STATUS_TERMINATED = 7;
  STATUS_COMPLETED = 8;
  STATUS_RESYNC = 9;
  STATUS_FAILED = 10;
}

message CDCFlowConfigUpdate {
  repeated TableMapping additional_tables = 1;
  uint32 batch_size = 2;
  uint64 idle_timeout = 3;
  int32 number_of_syncs = 4;
  repeated TableMapping removed_tables = 5;
  map<string, string> updated_env = 6;
  uint32 snapshot_num_rows_per_partition = 7;
  uint32 snapshot_num_partitions_override = 10;
  uint32 snapshot_max_parallel_workers = 8;
  uint32 snapshot_num_tables_in_parallel = 9;
}

message FlowConfigUpdate {
  CDCFlowConfigUpdate cdc_flow_config_update = 1;
}
